<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="taembe.example.blackwine.taembe.view.product.ProductDetail">

    <include
        android:id="@+id/include_toolbar_product_detail"
        layout="@layout/toolbar_layout" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/topGroupPanel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp"
                android:id="@+id/topGroupPanel_title_img"
                android:background="@color/white">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:id="@+id/ivImageProductDetail"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleProductDetail"
                    android:textColor="#000000"
                    android:textSize="17dp"
                    android:text="Title product detail"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@id/topGroupPanel_title_img"
                android:id="@+id/topGroupPanel_price_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvStatusProductDetail"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="#D50000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPriceProductDetail"
                    android:textSize="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/Price"
                    android:text="250000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOldPriceProductDetail"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/OldPrice"
                    android:layout_below="@+id/tvPriceProductDetail"
                    android:text="(250000đ)" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frameLayoutOptionProductDetail"
                    android:layout_below="@id/tvOldPriceProductDetail">
                </FrameLayout>



                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBuyProductDetail"
                    android:layout_below="@id/frameLayoutOptionProductDetail"
                    android:text="@string/add_to_cart"
                    android:backgroundTint="@color/IndigoA100"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                android:layout_below="@id/topGroupPanel_price_btn"
                android:id="@+id/line1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/white"
                android:id="@+id/frameLayoutImagesProductDetail"
                android:layout_below="@+id/line1">
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frameLayoutImagesProductDetail"
                android:id="@+id/layoutDescriptionProductDetail"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTilteDescriptionProductDetail"
                    android:textColor="#000000"
                    android:text="@string/product_description"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/tvDescriptionProductDetail"
                    android:text="Description\nDescription\nDescription\nDescription"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTitleSkuProductDetail"
                            android:textColor="#000000"
                            android:text="@string/sku"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvSkuProductDetail"
                            android:text="Không có"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTitleBrandProductDetail"
                            android:textColor="#000000"
                            android:text="@string/brand"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvBrandProductDetail"
                            android:text="Không có"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTitleMadeinProductDetail"
                            android:textColor="#000000"
                            android:text="@string/made_in"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvMadeinProductDetail"
                            android:text="Không có"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                android:layout_below="@id/layoutDescriptionProductDetail"
                android:id="@+id/line2"/>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
